--- a/kubernetes-centos7/master-2/vagrantfile
+++ b/kubernetes-centos7/master-2/vagrantfile
@@ -3,11 +3,11 @@
 
 Vagrant.configure("2") do |config|
   config.vm.box = "centos/7"
-  config.vm.network "private_network", ip: "172.16.10.100"
-  config.vm.hostname = "master.xtl"
+  config.vm.network "private_network", ip: "172.16.10.101"
+  config.vm.hostname = "master-2.xtl"
 
   config.vm.provider "virtualbox" do |vb|
-     vb.name = "master.xtl"
+     vb.name = "master-2.xtl"
      vb.cpus = 2
      vb.memory = "4096"
   end
@@ -23,9 +23,12 @@ Vagrant.configure("2") do |config|
     systemctl reload sshd
 # Ghi nội dung sau ra file /etc/hosts để truy cập được các máy theo HOSTNAME
 cat >>/etc/hosts<<EOF
-172.16.10.100 master.xtl
-172.16.10.101 worker1.xtl
-172.16.10.102 worker2.xtl
+172.16.10.100 master-1.xtl
+172.16.10.101 master-2.xtl
+172.16.10.102 worker-1.xtl
+172.16.10.103 worker-2.xtl
+172.16.10.104 worker-3.xtl
+172.16.10.105 nsf
 EOF
 
   SHELL
