--- a/kubernetes-centos7/worker-2/Vagrantfile
+++ b/kubernetes-centos7/worker-2/Vagrantfile
@@ -3,11 +3,11 @@
 
 Vagrant.configure("2") do |config|
     config.vm.box = "centos/7"
-    config.vm.network "private_network", ip: "172.16.10.101"
-    config.vm.hostname = "worker1.xtl"
+    config.vm.network "private_network", ip: "172.16.10.103"
+    config.vm.hostname = "worker-2.xtl"
   
     config.vm.provider "virtualbox" do |vb|
-       vb.name = "worker1.xtl"
+       vb.name = "worker-2.xtl"
        vb.cpus = 1
        vb.memory = "2048"
     end
@@ -23,9 +23,12 @@ Vagrant.configure("2") do |config|
   
   
   cat >>/etc/hosts<<EOF
-  172.16.10.100 master.xtl
-  172.16.10.101 worker1.xtl
-  172.16.10.102 worker2.xtl
+  172.16.10.100 master-1.xtl
+  172.16.10.101 master-2.xtl
+  172.16.10.102 worker-1.xtl
+  172.16.10.103 worker-2.xtl
+  172.16.10.104 worker-3.xtl
+  172.16.10.105 nsf
   EOF
   
       
